# anyo

./: .gitignore  Dockerfile  Dockerfile.dev  analyze_pickle.py  authenticate_hf.py  check_params.py  check_titles.py  close_ilora.md  config.yaml  config_refactor.md  count_train_rows.py  debug_output.txt  dummy_item_emb.pt  dummy_student.ckpt  get_num_items.py  hard_sample_indices.pt  pyproject.toml  reproduce_bug.py  reproduce_ilora_bug.py  reproduce_padding.py  run_cpu_tests.sh  test_conf_output.txt  test_hydra.py  test_imit_output.txt  test_integration_dummies.py  test_output.txt  test_output_2.txt  verify_fix.py  verify_ml100k_distribution.py  verify_num_items.py  verify_sampling_strategy.py
cmd/: analyze_logs.sh  authenticate_hf.sh  compute_embeddings.sh  movielens.sh  run_all_pipeline.sh  run_bigrec.sh  run_distill.sh  run_distill_dllm2rec.sh  run_eval_all.sh  run_mining.sh  run_moe_bigrec.sh  run_preprocess_data.sh  run_student.sh  run_student_baseline.sh  run_teacher.sh  run_teacher_train.sh  start_container_and_install.sh  tune_popularity.sh
cmd/colab/: 00_install_poetry.sh  01_install_dependencies.sh  02_prepare_dataset.sh  10_run_student_baseline.sh  11_run_teacher.sh  12_run_distill.sh  run_all_experiments.sh
cmd/run_bigrec_posttraining/: ensemble_model.py  run.py  run.sh
conf/: config.yaml  mining.yaml  post_training_config.yaml
conf/active/: all.yaml
conf/active_learning/: badge.yaml  coreset.yaml  default.yaml  entropy.yaml  entropy_diversity.yaml  gradient_norm.yaml  kmeans.yaml  least_confidence.yaml  loss.yaml  margin.yaml  random.yaml
conf/dataset/: ml-100k.yaml  ml-1m.yaml  movielens.yaml  test_dataset_name.yaml
conf/distill/: dllm2rec.yaml  generative.yaml
conf/eval/: default.yaml
conf/experiment/: bigrec_movielens.yaml  ilora_distill.yaml  ilora_movielens.yaml  ilora_student.yaml  ilora_teacher.yaml  moe_bigrec_movielens.yaml  student_movielens.yaml  test_moe_bigrec.yaml  test_student.yaml
conf/hydra/: default.yaml
conf/llm_model/: gemma_2b.yaml
conf/logging/: default.yaml
conf/metrics/: recsys.yaml
conf/paths/: default.yaml
conf/post_training/: default.yaml
conf/student/: sasrec.yaml
conf/teacher/: bigrec.yaml  ilora.yaml  moe_bigrec.yaml
conf/train/: bigrec.yaml  default.yaml  distill.yaml  distill_production.yaml  student.yaml  student_production.yaml  teacher.yaml  teacher_production.yaml
discussions/docs/: implement.md  implement_v1.md
discussions/prompts/: prompts.md
docs/: implement.md  tmp_memo.md
docs/archive/: 02_development_notes_ja.md  05_handover_notes.md  06_difference_from_asis.md  07_tmp_plan.md  08_implement_for_colab.md
docs/prompt/: order.txt
docs/refactor/: refactoring_plan.md  test_cases.md
docs/report/: cuda_driver_error_investigation.md  for_faster_teacher_train.md  warning_analysis_20251124.md
docs/research/: 00_lora_oom.md  01_progressbar_best_practice.md  02_lora_faster.md  03_about_num_workers.md  04_sequence_use_pattern.md  05_llm_retrieval_approaches.md  05_small_llm_survey.md  06_llara_vs_anyo.md  07_bridging_generative_and_retrieval.md  08_tiger_deep_dive.md  09_simple_dense_retrieval_papers.md  10_cllmrec_vs_sasrec.md  (+21 more)
env_shell/: start_experiment_container.sh
tests/: debug_checkpointing.py  debug_config.py  test_padding_logic.py
(+189 files in other folders)
