[tool.poetry]
name = "anyo-ilora-dllm2rec"
version = "0.1.0"
description = "LLM->Sequential Rec distillation framework (iLoRA logic + DLLM2Rec logic)"
authors = ["<Your Name> <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "^2.2.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
numpy = "^1.26.4"
transformers = "^4.35.2"
peft = "^0.6.2"
pytorch-lightning = "2.1.3"
hydra-core = "^1.3.2"
torchmetrics = "^1.4.0"
rich = "^13.7.1"
tensorboard = "^2.15.0"
bitsandbytes = "^0.48.2"
sentencepiece = "^0.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
black = "^24"
ruff = "^0.7"

[tool.poetry.scripts]
run-teacher = "src.exp.run_teacher:main"
run-student-baseline = "src.exp.run_student_baseline:main"
run-distill = "src.exp.run_distill:main"
run-eval-all = "src.exp.run_eval_all:main"

[tool.pytest.ini_options]
norecursedirs = ["ref_repositories"]
